color picker init

--- a/index.html
+++ b/index.html
@@ -9,15 +9,18 @@
 </head>
 <body>
     <main>
-        <button><a href="https://www.youtube.com/watch?v=y9F-XzrYIrs&list=PLR8vUZDE6IeN2nqa6d0ezPNPcPrcOufCR&index=18" target="_blank">Project Tutorial Source</a></button>
         <!-- Generator -->
-        <h1>Color Picker</h1>
-        <p>
-            <button>Press to Randomize</button>
-        </p>
-        <h4>Color Assigned</h4>
+        <div class="header">
+            <h1>Color Picker</h1>
+                <button class="project-yt-link"><a href="https://www.youtube.com/watch?v=y9F-XzrYIrs&list=PLR8vUZDE6IeN2nqa6d0ezPNPcPrcOufCR&index=18" target="_blank">Project Tutorial Source</a></button>
+            <p>
+                
+                <button class="generator-button">Press to Randomize</button>
+            </p>
+            <h4>Color Assigned</h4>
+        </div>
         <!-- Color Picked -->
-        <div class="colors">
+        <div class="colors-box">
             <button class="lock-toggle">
                 <img src="icons/lock-open.svg" alt="open lock icon">
             </button>
@@ -27,7 +30,7 @@
             <button class="copy-hex">Copy</button>
         </div>
 
-        <div class="colors">
+        <div class="colors-box">
             <button class="lock-toggle">
                 <img src="icons/lock-open.svg" alt="open lock icon">
             </button>
@@ -37,7 +40,7 @@
             <button class="copy-hex">Copy</button>
         </div>
 
-        <div class="colors">
+        <div class="colors-box">
             <button class="lock-toggle">
                 <img src="icons/lock-open.svg" alt="open lock icon">
             </button>
@@ -47,7 +50,7 @@
             <button class="copy-hex">Copy</button>
         </div>
 
-        <div class="colors">
+        <div class="colors-box">
             <button class="lock-toggle">
                 <img src="icons/lock-open.svg" alt="open lock icon">
             </button>
