--- a/index.html
+++ b/index.html
@@ -20,9 +20,10 @@
             <h4>Color Assigned</h4>
         </div>
         <!-- Color Picked -->
+    <div class="colour-randomizer">
         <div class="colors-box">
             <button class="lock-toggle">
-                <img src="icons/lock-open.svg" alt="open lock icon">
+                <img class="" src="icons/lock-open.svg" alt="open lock icon">
             </button>
 
             <input type="text" class="color-input" value="#000000">
@@ -59,6 +60,7 @@
 
             <button class="copy-hex">Copy</button>
         </div>
+    </div>
     </main>
 </body>
 </html>
