--- a/index.html
+++ b/index.html
@@ -12,16 +12,16 @@
         <!-- Generator -->
         <div class="header">
             <h1>Color Picker</h1>
-                <button class="project-yt-link"><a href="https://www.youtube.com/watch?v=y9F-XzrYIrs&list=PLR8vUZDE6IeN2nqa6d0ezPNPcPrcOufCR&index=18" target="_blank">Project Tutorial Source</a></button>
+                <button class="project-yt-link"><a class="project-link-anchor" href="https://www.youtube.com/watch?v=y9F-XzrYIrs&list=PLR8vUZDE6IeN2nqa6d0ezPNPcPrcOufCR&index=18" target="_blank">Project Tutorial Source</a></button>
             <p>
                 
                 <button class="generator-button">Press to Randomize</button>
             </p>
-            <h4>Color Assigned</h4>
         </div>
+        <h4>Color Assigned</h4>
         <!-- Color Picked -->
-    <div class="colour-randomizer">
-        <div class="colors-box">
+    <div class="color-box-container">
+        <div class="color-box">
             <button class="lock-toggle">
                 <img class="" src="icons/lock-open.svg" alt="open lock icon">
             </button>
@@ -31,7 +31,7 @@
             <button class="copy-hex">Copy</button>
         </div>
 
-        <div class="colors-box">
+        <div class="color-box">
             <button class="lock-toggle">
                 <img src="icons/lock-open.svg" alt="open lock icon">
             </button>
@@ -41,7 +41,7 @@
             <button class="copy-hex">Copy</button>
         </div>
 
-        <div class="colors-box">
+        <div class="color-box">
             <button class="lock-toggle">
                 <img src="icons/lock-open.svg" alt="open lock icon">
             </button>
@@ -51,7 +51,7 @@
             <button class="copy-hex">Copy</button>
         </div>
 
-        <div class="colors-box">
+        <div class="color-box">
             <button class="lock-toggle">
                 <img src="icons/lock-open.svg" alt="open lock icon">
             </button>
